--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
         <div class="navbar-nav">
             <a href="/about/">About</a>
             {% if user.is_authenticated %}
+                <a href="/profile/">Profile</a>
+                <a href="/appointments/">My Appointments</a>
                 <a href="/book/">Book Now</a>
             {% else %}
                 <a href="/register/">Register</a>
